--- a/homepage.css
+++ b/homepage.css
@@ -72,7 +72,7 @@ text-align:center;
     color: brown;
 }*/
 body{
-    background: url("../../bground1.jpg") no-repeat fixed;
+    background: url("../../bg2.jpg") no-repeat fixed;
     /* set background tensile */
     background-size: cover;
     -moz-background-size: cover;
