--- a/login.css
+++ b/login.css
@@ -1,5 +1,5 @@
 body{
-    background: url("../assets/images/bg_login.jpg") no-repeat fixed;
+    background: url("..bground1.jpg") no-repeat fixed;
     /* set background tensile */
     background-size: cover;
     -moz-background-size: cover;
