--- a/homepage.css
+++ b/homepage.css
@@ -73,7 +73,7 @@ text-align:center;
 }*/
 body{
 
-    background: url("../../bg3.jpg") no-repeat fixed;
+    background: url("bg4.jpg") no-repeat fixed;
     /* set background tensile */
     background-size: cover;
     -moz-background-size: cover;
