--- a/homepage.css
+++ b/homepage.css
@@ -71,7 +71,14 @@ text-align:center;
     background-color: bisque;
     color: brown;
 }*/
-body{
+
+*body{
+
+    background: url("bg4.jpg") no-repeat fixed;
+    /* set background tensile */
+    background-size: 100% 100%;
+}
+/*body{
 
     background: url("bg4.jpg") no-repeat fixed;
     /* set background tensile */
@@ -79,7 +86,7 @@ body{
     -moz-background-size: cover;
     -webkit-background-size:cover;
     -o-background-size:cover;
-}
+}*/
 /*#footer {
     position: relative;
     background-color: bisque;
